--- a/src/styles/ContadorApp.css
+++ b/src/styles/ContadorApp.css
@@ -43,6 +43,10 @@ button:active {
 }
 
 .ajustar-footer {
-    
+
     background-color: #333;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
 }
